# PeakFLOPS

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  peak_flops.cc  plot.py  test_flops.cc
